<?xml version="1.0" encoding="utf-8"?>
<GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    tools:context=".ListItemsActivity"
    android:background="@color/gold"
    android:rowCount="2"
    android:columnCount="2">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/checkbox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/Switch"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/radioButton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

</GridLayout>