<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecastActivity">


    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="345dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Spinner>

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="120dp"
        android:hint="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citySpinner" />

    <TextView
        android:id="@+id/minTempTextView"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="120dp"
        android:text="@string/mintemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTempTextView" />

    <TextView
        android:id="@+id/currentTempTextView"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="120dp"
        android:hint="@string/currenttemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/maxTempTextView"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:hint="@string/maxtemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTempTextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="390dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTempTextView"
        app:layout_constraintVertical_bias="0.261" />


</androidx.constraintlayout.widget.ConstraintLayout>